# SimpleCounting

./: .gitignore  LICENSE  Main.hs  SimpleCounting.cabal
master/: config
slave/: config
